syntax = "proto3";

package ru.otus.protobuf;

option java_multiple_files = true;

message GenerateValuesRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message ValueResponse {
  int32 value = 1;
}

service RemoteGeneratingService {
  rpc generateValues(GenerateValuesRequest) returns (stream ValueResponse);
}